--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "doctrine/migrations": "1.0.*@dev",
         "doctrine/doctrine-migrations-bundle": "2.1.*@dev",
-        "phpunit/phpunit": "4.6.*"
+        "phpunit/phpunit": "4.6.*",
+        "symfony/options-resolver": "~2.6"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
